= 5.9 = - New: Lazy load of iframes with treshold and fadein. Iframes can be loaded after the parent is done or the iframe is shown in the viewport! (Pro) - New: Better input validation. Avoids configuration errors. - New: Wordpress 3.9.1 is supported - New: An alternative to the eval function is now used in Javascript to improve security and speed. - New: Browscap version 5029 lite 8th May 2014 is now included. (Pro) - Fix: Code improvements found with the plugin checker plugin - Fix: Hidden tabs was not working because of the responsive iframe feature. Now both do work independant again. (Pro) - Fix: Improved shortcode generator (Pro) - Fix: Width is now measured without the extra space (which was 0 by default anyway ;)) - Fix: Whitelist for params was extended by :,? and & - Fix: Wrong default for Set Iframe height by ratio (iframe_height_ratio) was fixed (Pro) - Fix: loader icon and responsive iframe do now work together! (Pro)
git-svn-id: https://plugins.svn.wordpress.org/advanced-iframe/trunk@917513 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/ai.css
+++ b/css/ai.css
@@ -50,11 +50,11 @@
   border: 2px solid #fefefe;
 }
 .signup_account_container#last .signup_inner {
-	width: 235px!important;
+	width: 245px!important;
 }
 
 .signup_account_container#last {
-  width: 297px!important;
+  width: 307px!important;
 }
 
 .signup_account_container:hover, .signup_account_container_active {
@@ -156,7 +156,7 @@ ul#browser-list {
 }
 
 
-#details-workaround, #details-javascript, #jquery-help, #browser-help {
+#details-workaround, #details-javascript, #jquery-help, #browser-help, #jquery-gen {
   background: #F2F7F9;
 	border: 1px solid #d2d7d9;
   padding:10px; 
